# adventofcode

./: .gitignore  AGENTS.md  Cargo.toml  README.md  day22-helper.txt
01/: main.go
02/: main.go  main_test.go
03/: main.go  main_test.go
04/: main.go  main_test.go
05/: main.go  main_test.go
aoc15/: Cargo.toml
aoc15/benches/: bench.rs
aoc15/src/: day01.rs  day02.rs  day03.rs  day04.rs  (+19 more)
aoc19/: Cargo.toml  README.md  new_day.sh
aoc20/: Cargo.toml  README.md  new_day.sh
aoc21/: Cargo.toml  README.md  new_day.sh
aoc22/: Cargo.toml
aoc22/benches/: bench.rs
aoc22/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
aoc23/: Cargo.toml  README.md
aoc24/: Cargo.toml  README.md  new_day.sh
aoc24/benches/: bench.rs
aoc24/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.dot  day24.rs  day25.rs  lib.rs  main.rs  topsort.rs
aoc25/: Cargo.toml  new_day.sh
benches/: bench.rs
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  lib.rs  main.rs
(+104 files in other folders)
