[package]
name = "adventofcode22"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "gen"
path = "src/bin/gen.rs"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
take-until = "0.1.0"
