[package]
name = "aoc22"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4"
rstest = "0.16.0"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
take-until = "0.1.0"
num = "0.4"
nom = "7.1.1"
arrayvec = "0.7.2"
bittle = "0.4.3"
partitions = "0.2.4"
rayon = "1.6.1"
