[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.4"
rstest = "0.16.0"

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
itertools = "0.10.5"
num = "0.4"
fxhash = "0.2.1"
rayon = "1.6.1"
arrayvec = "0.7.2"
edit-distance = "2.1.0"
polyfit-rs = "0.2.1"
regex = "1.11.1"
bittle = "0.6.0"
string-interner = "0.18.0"
